@@ -1,3 +1,7 @@
+Pending - build 152
+
+-- static analysis fix for new_http_inspect
+
 15/05/08 - build 151
 
 -- doc tweaks
